--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -77,9 +77,13 @@
             Inscreva-se de graça
           </button>
         </div>
-        <img src="../img/imgPrincipal.png" alt="banner principal" />
+        <img
+          src="../img/imgPrincipal.png"
+          alt="banner principal"
+          id="mainImg"
+        />
       </section>
-      <section id="quemSomos">
+      <section id="quemSomos" style="display: none">
         <div id="title-quemSomos">
           <h2>FaciListas</h2>
           <h4>Somos um site inteligente para pessoas ocupadas</h4>
@@ -104,7 +108,7 @@
           </div>
         </div>
       </section>
-      <section id="paraQuem">
+      <section id="paraQuem" style="display: none">
         <div id="title-paraQuem">
           <h3>Você é um amante da lista?</h3>
           <h3>
@@ -150,7 +154,7 @@
           </div>
         </div>
       </section>
-      <section id="crieSuaLista">
+      <section id="crieSuaLista" style="display: none">
         <div id="titulo-facaLista">
           <h2>Crie sua lista</h2>
           <h3>Somos um site inteligente para pessoas ocupadas.</h3>
@@ -299,7 +303,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer style="display: none">
       <p>FaciListas© 2024</p>
       <p>
         Adrian Sodré, Antonio Cesar Silva, Breno Figueiredo, David Milan e
