adicionando responsividade na secao de quem somos

--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -83,13 +83,13 @@
           id="mainImg"
         />
       </section>
-      <section id="quemSomos" style="display: none">
+      <section id="quemSomos">
         <div id="title-quemSomos">
           <h2>FaciListas</h2>
           <h4>Somos um site inteligente para pessoas ocupadas</h4>
         </div>
         <div id="infos-quemSomos">
-          <img src="../img/imgQuemSomos.png" alt="imagem" />
+          <img src="../img/imgQuemSomos.png" alt="imagem" id="imgQuemSomos" />
           <div id="txt-quemSomos">
             <h3>FaciListas é:</h3>
             <p>
