adicionando responsividade no paraQUem

--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -108,7 +108,7 @@
           </div>
         </div>
       </section>
-      <section id="paraQuem" style="display: none">
+      <section id="paraQuem">
         <div id="title-paraQuem">
           <h3>Você é um amante da lista?</h3>
           <h3>
