adicionando responsividade no faca sua lista

--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -154,7 +154,7 @@
           </div>
         </div>
       </section>
-      <section id="crieSuaLista" style="display: none">
+      <section id="crieSuaLista">
         <div id="titulo-facaLista">
           <h2>Crie sua lista</h2>
           <h3>Somos um site inteligente para pessoas ocupadas.</h3>
