adicionando responsividade no footer

--- a/codigo-fonte/paginaIncial/index.html
+++ b/codigo-fonte/paginaIncial/index.html
@@ -303,7 +303,7 @@
         </div>
       </section>
     </main>
-    <footer style="display: none">
+    <footer>
       <p>FaciListas© 2024</p>
       <p>
         Adrian Sodré, Antonio Cesar Silva, Breno Figueiredo, David Milan e
